--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "license": "BSD",
   "dependencies": {
     "express": "4.13.4",
-    "socket.io": "1.4.5"	
+    "socket.io": "1.4.5"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
-
