--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "BSD",
   "dependencies": {
     "express": "4.13.4",
-    "socket.io": "1.4.5"
+    "socket.io": "1.4.5",
+    "socket.io-redis": "^4.0.0"
   },
   "scripts": {
     "start": "node index.js"
